tests/NormalTests/paczka1/small_fuzzy/25501247.err
Error in line 5: f8h9GokC A994 80,3
Error in line 4: A994 A192 83,9
